--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "nodejs",
+  "name": "coc_bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guntur82/coc_bot.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/guntur82/coc_bot/issues"
+  },
+  "homepage": "https://github.com/guntur82/coc_bot#readme",
   "dependencies": {
-    "@types/node": "^22.13.11"
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.17.0"
   }
 }
